<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.bu.ubru.ubru_ui_test1.MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/ubru_text_only"
        android:alpha=".2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/main_layout">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_text"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="RESULT"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="100dp">

            <Button
                android:id="@+id/new_user_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/arduino_button_text"
                android:textSize="20sp"
                android:onClick="arduinoMessage"/>

            <Button
                android:id="@+id/preset_brews_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/db_button_text"
                android:textSize="20sp"
                android:onClick="dbMessage"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/test_info_button"
            android:layout_height="wrap_content"
            android:text="@string/test_button_text"
            android:layout_width="500dp"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            android:onClick="testInfoMessage"/>

    </LinearLayout>



</RelativeLayout>
