<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.bu.ubru.ubru_ui_test1.TestInfoActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/ubru_text_only"
        android:alpha=".2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:id="@+id/main_layout">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_text"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/arduino_button_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="This test communicates to the raspberry pi through bluetooth. After receiving the correct data, the raspberry pi then sends a signal through GPIO pin (?), which is received by the Arduino and recorded."
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/db_button_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="This test sends a get request from the database. It retrieves hardcoded sample data from the database, and displays it on the screen. "
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/test_info_button"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text"
            android:layout_width="500dp"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            android:onClick="backMessage"/>

    </LinearLayout>

</RelativeLayout>
