<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.bu.ubru.ubru_ui_test1.ArduinoTestActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/ubru_text_only"
        android:alpha=".2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/main_layout">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen_text"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/arduino_button_text"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="100dp">

            <TextView
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Result:"
                android:textSize="30sp"
                android:layout_marginBottom="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="100dp">

                <Button
                    android:id="@+id/arduino_test_button1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="Send Test 1"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/arduino_test_button2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="Send Test 2"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/test_info_button"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text"
            android:layout_width="500dp"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            android:onClick="backMessage"/>

    </LinearLayout>



</RelativeLayout>

